@@ -5,72 +5,6 @@ this repository contains the full copyright notices and license terms. -->
     <data>
         <menuitem name="Journals" parent="menu_account_configuration"
             id="menu_journal_configuration"/>
-        <record model="ir.ui.view" id="journal_type_form">
-            <field name="model">account.journal.type</field>
-            <field name="type">form</field>
-            <field name="name">journal_type_form</field>
-        </record>
-        <record model="ir.ui.view" id="journal_type_tree">
-            <field name="model">account.journal.type</field>
-            <field name="type">tree</field>
-            <field name="name">journal_type_tree</field>
-        </record>
-        <record model="ir.action.act_window" id="act_journal_type_form">
-            <field name="name">Journal Types</field>
-            <field name="res_model">account.journal.type</field>
-        </record>
-        <record model="ir.action.act_window.view" id="act_journal_type_form_view1">
-            <field name="sequence" eval="10"/>
-            <field name="view" ref="journal_type_tree"/>
-            <field name="act_window" ref="act_journal_type_form"/>
-        </record>
-        <record model="ir.action.act_window.view" id="act_journal_type_form_view2">
-            <field name="sequence" eval="20"/>
-            <field name="view" ref="journal_type_form"/>
-            <field name="act_window" ref="act_journal_type_form"/>
-        </record>
-        <menuitem parent="menu_journal_configuration"
-            action="act_journal_type_form" id="menu_journal_type_form"/>
-
-        <record model="ir.model.access" id="access_journal_type">
-            <field name="model" search="[('model', '=', 'account.journal.type')]"/>
-            <field name="perm_read" eval="True"/>
-            <field name="perm_write" eval="False"/>
-            <field name="perm_create" eval="False"/>
-            <field name="perm_delete" eval="False"/>
-        </record>
-        <record model="ir.model.access" id="access_journal_type_account_admin">
-            <field name="model" search="[('model', '=', 'account.journal.type')]"/>
-            <field name="group" ref="group_account_admin"/>
-            <field name="perm_read" eval="True"/>
-            <field name="perm_write" eval="True"/>
-            <field name="perm_create" eval="True"/>
-            <field name="perm_delete" eval="True"/>
-        </record>
-        <record model="account.journal.type" id="journal_type_general">
-            <field name="name">General</field>
-            <field name="code">general</field>
-        </record>
-        <record model="account.journal.type" id="journal_type_revenue">
-            <field name="name">Revenue</field>
-            <field name="code">revenue</field>
-        </record>
-        <record model="account.journal.type" id="journal_type_expense">
-            <field name="name">Expense</field>
-            <field name="code">expense</field>
-        </record>
-        <record model="account.journal.type" id="journal_type_cash">
-            <field name="name">Cash</field>
-            <field name="code">cash</field>
-        </record>
-        <record model="account.journal.type" id="journal_type_situation">
-            <field name="name">Situation</field>
-            <field name="code">situation</field>
-        </record>
-        <record model="account.journal.type" id="journal_type_write_off">
-            <field name="name">Write-Off</field>
-            <field name="code">write-off</field>
-        </record>
 
         <record model="ir.ui.view" id="journal_view_form">
             <field name="model">account.journal</field>
