@@ -1,3 +1,5 @@
+* Remove journal type
+
 Version 4.8.0 - 2018-04-23
 * Bug fixes (see mercurial logs for details)
 * Use tax code line for tax reporting
